chore: fixed horizontal shift navbar

--- a/naonedia-app/src/app/layouts/main/main.scss
+++ b/naonedia-app/src/app/layouts/main/main.scss
@@ -1,5 +1,5 @@
 #content{
-    padding-top: 60px;
+    padding-top: 50px;
     padding-left: 0;
     padding-right: 0;
 }
